--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ button.white {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url('/img/banner/b2.jpg');
+    background-image: url('../img/banner/b2.jpg');
     background-size: cover;
     width: 100%;
     height: 40vh;
@@ -361,7 +361,7 @@ button.white {
 }
 
 #sm-banner .banner-box2 {
-    background-image: url("/img/banner/b10.jpg");
+    background-image: url('../img/banner/b10.jpg');
 }
 
 #sm-banner h2 {
@@ -398,7 +398,7 @@ button.white {
     justify-content: center;
     align-items: flex-start;
     text-align: center;
-    background-image: url("/img/banner/b7.jpg");
+    background-image: url('../img/banner/b7.jpg');
     min-width: 30%;
     height: 30vh;
     background-size: cover;
@@ -408,11 +408,11 @@ button.white {
 }
 
 #banner3 .banner-box2 {
-    background-image: url("/img/banner/b4.jpg");
+    background-image: url('../img/banner/b4.jpg');
 }
 
 #banner3 .banner-box3 {
-    background-image: url("/img/banner/b18.jpg");
+    background-image: url('../img/banner/b18.jpg');
 }
 
 #banner3 h2 {
@@ -433,7 +433,7 @@ button.white {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    background-image: url("/img/banner/b14.png");
+    background-image: url('../img/banner/b14.png');
     background-repeat: no-repeat;
     background-position: 20% 30%;
     background-color: #041e42;
@@ -711,7 +711,7 @@ footer .copyright {
 
 /* contact page style */
 #page-header.contact-header {
-    background-image: url('/img/banner/b20.jpg');
+    background-image: url('../img/banner/b20.jpg');
 }
 
 #contact-details {
