--- a/css/shop.css
+++ b/css/shop.css
@@ -1,6 +1,6 @@
 /* Page Header */
 #page-header {
-    background-image: url("/img/banner/b1.jpg");
+    background-image: url('../img/banner/b1.jpg');
     width: 100%;
     height: 40vh;
     background-size: cover;
